--- a/index.html
+++ b/index.html
@@ -3,12 +3,62 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My GitHub Pages Website</title>
+  <title>Darian Dean | Portfolio</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
 </head>
 <body>
-  <h1>Hello, World! 🚀</h1>
-  <p>This is my first GitHub Pages website.</p>
-  <script src="script.js"></script>
+  <!-- Header -->
+  <header class="hero">
+    <h1>Darian Dean</h1>
+    <p>Computer Science Student | Aspiring Software Engineer</p>
+    <div class="links">
+      <a href="mailto:darian.aidan@gmail.com">Email</a>
+      <a href="https://www.linkedin.com/in/dariandean/" target="_blank">LinkedIn</a>
+      <a href="https://github.com/YOUR_GITHUB" target="_blank">GitHub</a>
+    </div>
+  </header>
+
+  <!-- About -->
+  <section class="about" data-aos="fade-up">
+    <h2>About Me</h2>
+    <p>Dedicated Computer Science student with skills in Java, Python, and C++. 
+       Experienced in algorithms, Git/GitHub, and tutoring. 
+       Adaptable and resilient, seeking opportunities to contribute and grow.</p>
+  </section>
+
+  <!-- Skills -->
+  <section class="skills" data-aos="fade-right">
+    <h2>Technical Skills</h2>
+    <ul>
+      <li>Java, Python, C++, C</li>
+      <li>Data Structures & Algorithms</li>
+      <li>Linux, Git, GitHub, Jira</li>
+      <li>Unit Testing, Debugging</li>
+    </ul>
+  </section>
+
+  <!-- Projects -->
+  <section class="projects" data-aos="fade-left">
+    <h2>Projects</h2>
+    <div class="project-card">
+      <h3>Project Name</h3>
+      <p>Short description of what the project does.</p>
+      <a href="https://github.com/YOUR_REPO" target="_blank">GitHub</a>
+      <a href="projects/project1.html">Learn More</a>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <footer data-aos="fade-up">
+    <p>Connect with me:</p>
+    <a href="mailto:darian.aidan@gmail.com">Email</a> | 
+    <a href="https://www.linkedin.com/in/dariandean/" target="_blank">LinkedIn</a>
+  </footer>
+
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
