update webpage (honors and certifications)

--- a/index.html
+++ b/index.html
@@ -133,7 +133,6 @@
               <span>Python</span>
               <span>YOLOv5</span>
               <span>Tesseract</span>
-              <span>OpenCV</span>
             </div>
             <div class="project-links">
               <a href="https://github.com/dariandean0/plate-vision" target="_blank" class="btn-github">
@@ -178,7 +177,7 @@
           <div class="experience-header">
             <h3>Computer Science Help Desk Tutor</h3>
             <span class="company">Florida Institute of Technology</span>
-            <span class="date">August 2024 - May 2025</span>
+            <span class="date">October 2024 - Present</span>
           </div>
           <p>As a Help Desk Tutor, I assist students with computer science coursework, providing guidance on programming concepts, 
             debugging techniques, and study strategies. Focus on building student confidence and problem-solving skills.</p>
@@ -197,6 +196,49 @@
               </ul>
             </ul>
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Honors and Certifications -->
+  <section class="honors" data-aos="fade-up">
+    <div class="container">
+      <h2>Honors & Certifications</h2>
+      <div class="honors-grid">
+        <div class="honor-card" data-aos="zoom-in">
+          <div class="honor-icon">
+            <i class="fas fa-award"></i>
+          </div>
+          <h3>Upsilon Pi Epsilon</h3>
+          <p class="honor-date">Fall 2024 - Present</p>
+          <p>International Honor Society for the Computing and Information Disciplines</p>
+        </div>
+
+        <div class="honor-card" data-aos="zoom-in">
+          <div class="honor-icon">
+            <i class="fas fa-certificate"></i>
+          </div>
+          <h3>National Cyber League 2022 Team & Individual Game</h3>
+          <p class="honor-date">Fall 2022</p>
+          <p>Participated in a nationwide cybersecurity competition with FITSEC (Florida Institute of Technology Cybersecurity Club)
+            in my 1st year at Florida Institute of Technology.
+            Ranked 1968 out of 6675 participants in the Individual Game. My team ranked 244 out of 3926 teams in the Team Game.</p>
+          <a href="#" class="verify-link" target="_blank">
+            <i class="fas fa-external-link-alt"></i> Verify
+          </a>
+        </div>
+
+        <div class="honor-card" data-aos="zoom-in">
+          <div class="honor-icon">
+            <i class="fas fa-code"></i>
+          </div>
+          <h3>Running Start Program - Southwestern Illinois College</h3>
+          <p class="honor-date">August 2020 - May 2022</p>
+          <p>Dual Enrollment program for select high school students who maintain a GPA of 4.5 (on a 5.0 scale) for their Junior and Senior years in high school</p>
+          <a href="#" class="verify-link" target="_blank">
+            <i class="fas fa-external-link-alt"></i> Verify
+          </a>
         </div>
       </div>
     </div>
