update webpage, information, profile pic, icons

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <h1>Darian Dean</h1>
       <p>Computer Science Student | Aspiring Software Engineer</p>
       <div class="links">
-        <a href="mailto:darian.aidan@gmail.com" class="btn-primary"><i class="fas fa-envelope"></i> Email</a>
-        <a href="https://www.linkedin.com/in/dariandean/" target="_blank" class="btn-primary"><i class="fab fa-linkedin"></i> LinkedIn</a>
-        <a href="https://github.com/dariandean0" target="_blank" class="btn-primary"><i class="fab fa-github"></i> GitHub</a>
+        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=darian.aidan@gmail.com" target="_blank" class="btn-primary"><img src="./images/icons/email-svgrepo-com.svg" alt="Email" class="icon"> Email</a>
+        <a href="https://www.linkedin.com/in/dariandean/" target="_blank" class="btn-primary"><img src="./images/icons/linkedin-161-svgrepo-com.svg" alt="Linkedin" class="icon"> LinkedIn</a>
+        <a href="https://github.com/dariandean0" target="_blank" class="btn-primary"><img src="./images/icons/github-142-svgrepo-com.svg" alt="Github" class="icon"> GitHub</a>
       </div>
     </div>
   </header>
@@ -25,10 +25,13 @@
   <section class="about" data-aos="fade-up">
     <div class="container">
       <h2>About Me</h2>
-      <p>I am a dedicated Computer Science student with skills in Java, Python, C++, and a foundation in C programming. 
-      Working Knowledge of Data Structures and Algorithms. Experienced with Git, GitHub, and basic Linux commands. As a military 
-      dependent, I bring adaptability and resilience to problem-solving and teamwork. Seeking an opportunity to leverage my technical skills 
-      and life experiences in a dynamic environment.</p>
+      <img src="./images/profile_pic.jpg" alt="Darian Dean" class="profile-pic">
+      <p>Hi, I'm a Computer Science student with a passion for building software and solving problems. I enjoy working with 
+         languages like Java, Python, and C++, and I'm always looking for new ways to challenge myself and grow as a developer. 
+         Outside of coding, I'm an open water scuba diver who loves exploring the ocean, and I spend a lot of my free time 
+         bowling, hiking, going to the beach, and hanging out with friends. I believe that staying active and balanced helps me 
+         bring fresh energy and creativity into my work. With my adaptability gained from my time as a military dependent and my  
+         drive to learn, I'm excited to connect with opportunities where I can contribute, grow, and make an impact.</p>
       <div class="resume-links">
         <a href="./documents/Dean Darian Resume 2025 (General).pdf" class="btn-primary" target="_blank">
           <i class="fas fa-file-pdf"></i> View Resume (General)
@@ -64,6 +67,16 @@
           </ul>
         </div>
       </div>
+      <div class="education-card">
+        <h3>Southwestern Illinois College</h3>
+        <p class="degree">Associate of Arts</p>
+        <p class="degree">Associate of Science</p>
+        <p class="date">AA awarded May 2022 | AS awarded July 2023</p>
+        <div class="education-details">
+          <h4>Dual Enrollment</h4>
+          <p>Dual enrollment program for select students who maintain a GPA of 4.5 (on a 5.0 scale). 
+            I attended SWIC full time my Junior and Senior year of Highschool</p>
+        </div>
     </div>
   </section>
 
@@ -105,7 +118,7 @@
           </ul>
         </div>
         <div class="skill-category">
-          <h3>Core Competencies</h3>
+          <h3>Software Development</h3>
           <ul>
             <li>Data Structures</li>
             <li>Algorithms</li>
@@ -236,9 +249,6 @@
           <h3>Running Start Program - Southwestern Illinois College</h3>
           <p class="honor-date">August 2020 - May 2022</p>
           <p>Dual Enrollment program for select high school students who maintain a GPA of 4.5 (on a 5.0 scale) for their Junior and Senior years in high school</p>
-          <a href="#" class="verify-link" target="_blank">
-            <i class="fas fa-external-link-alt"></i> Verify
-          </a>
         </div>
       </div>
     </div>
@@ -250,15 +260,15 @@
       <h2>Let's Connect</h2>
       <div class="social-links">
         <a href="mailto:darian.aidan@gmail.com" class="social-link">
-          <i class="fas fa-envelope"></i>
+          <img src="./images/icons/email-svgrepo-com.svg" alt="Email" class="icon">
           <span>Email</span>
         </a>
         <a href="https://www.linkedin.com/in/dariandean/" target="_blank" class="social-link">
-          <i class="fab fa-linkedin"></i>
+          <img src="./images/icons/linkedin-161-svgrepo-com.svg" alt="Email" class="icon">
           <span>LinkedIn</span>
         </a>
         <a href="https://github.com/dariandean0" target="_blank" class="social-link">
-          <i class="fab fa-github"></i>
+          <img src="./images/icons/github-142-svgrepo-com.svg" alt="Email" class="icon">
           <span>GitHub</span>
         </a>
       </div>
@@ -267,7 +277,6 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="https://kit.fontawesome.com/your-font-awesome-kit.js" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
     AOS.init({
