--- a/index.html
+++ b/index.html
@@ -33,11 +33,8 @@
          bring fresh energy and creativity into my work. With my adaptability gained from my time as a military dependent and my  
          drive to learn, I'm excited to connect with opportunities where I can contribute, grow, and make an impact.</p>
       <div class="resume-links">
-        <a href="./documents/Dean Darian Resume 2025 (General).pdf" class="btn-primary" target="_blank">
-          <i class="fas fa-file-pdf"></i> View Resume (General)
-        </a>
-        <a href="./documents/Dean Darian Resume 2025 (Internship).pdf" class="btn-primary" target="_blank">
-          <i class="fas fa-file-pdf"></i> View Resume (Internship)
+        <a href="./documents/Dean Darian Resume Software Eng.pdf.pdf" class="btn-primary" target="_blank">
+          <i class="fas fa-file-pdf"></i> View Resume
         </a>
       </div>
     </div>
@@ -101,8 +98,6 @@
           <ul>
             <li>HTML/CSS</li>
             <li>JavaScript/TypeScript</li>
-            <li>React</li>
-            <li>Node.js</li>
             <li>Android Development</li>
           </ul>
         </div>
@@ -114,7 +109,6 @@
             <li>Linux/Unix</li>
             <li>VS Code</li>
             <li>Jira</li>
-            <li>Docker</li>
           </ul>
         </div>
         <div class="skill-category">
