fix resume path

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
          bring fresh energy and creativity into my work. With my adaptability gained from my time as a military dependent and my  
          drive to learn, I'm excited to connect with opportunities where I can contribute, grow, and make an impact.</p>
       <div class="resume-links">
-        <a href="./documents/Dean Darian Resume Software Eng.pdf.pdf" class="btn-primary" target="_blank">
+        <a href="./documents/Dean Darian Resume Software Eng.pdf" class="btn-primary" target="_blank">
           <i class="fas fa-file-pdf"></i> View Resume
         </a>
       </div>
