Change email link to Gmail compose URL
Updated email link to use Gmail compose URL.

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     <div class="container">
       <h2>Let's Connect</h2>
       <div class="social-links">
-        <a href="mailto:darian.aidan@gmail.com" class="social-link">
+        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=darian.aidan@gmail.com" class="social-link">
           <img src="./images/icons/email-svgrepo-com.svg" alt="Email" class="icon">
           <span>Email</span>
         </a>
