Correct typos in experience descriptions

--- a/index.html
+++ b/index.html
@@ -170,12 +170,12 @@
           </div>
           <p>As a Passenger Service Agent with Menzies Aviation, I provide check-in, baggage handling, 
             and boarding services for international TUI flights at Melbourne Orlando International Airport (MLB). 
-            Support passengers with travel questions, ensure smooth flight operations, and coordinate with airport 
+            Support passengers with travel questions, ensure smooth flight operations, and coordinate with the airport 
             staff to maintain efficient and safe ground handling.</p>
           <ul class="experience-highlights">
             <li>Process over 150 passengers daily, ensuring accurate passenger manifests and baggage tracking</li>
             <li>Coordinate with multiple airline partners to handle irregular operations and flight delays</li>
-            <li>Maintain high on-time departure rate through efficient boarding and ground handling processes</li>
+            <li>Maintain a high on-time departure rate through efficient boarding and ground handling processes</li>
             <li>Help train new team members on safety protocols, system usage, and customer service best practices</li>
           </ul>
         </div>
@@ -195,7 +195,7 @@
               <li>Developed supplementary learning materials for complex topics in data structures and algorithms</li>
               <li>Conducted tutoring sessions on:</li>
               <ul class="topics-list">
-                <li>Discret Math</li>
+                <li>Discrete Math</li>
                 <li>Programming Language Concepts</li>
                 <li>Data Structures and Algorithms</li>
                 <li>Python Programming</li>
